// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a DecimalNumber 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    {
      "color": {
        "dynamic": {
          "dark": "#FFFFFF",
          "light": "#131313",
        },
      },
      "fontFamily": "Basel Grotesk",
      "fontSize": 19,
      "fontWeight": "400",
      "lineHeight": 24.7,
    }
  }
  suppressHighlighting={true}
>
  14,123
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": {
          "dynamic": {
            "dark": "rgba(255, 255, 255, 0.38)",
            "light": "rgba(19, 19, 19, 0.35)",
          },
        },
        "fontFamily": "Basel Grotesk",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24.7,
      }
    }
    suppressHighlighting={true}
  >
    .
    78
  </Text>
</Text>
`;

exports[`renders a DecimalNumber without a comma separator 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    {
      "color": {
        "dynamic": {
          "dark": "#FFFFFF",
          "light": "#131313",
        },
      },
      "fontFamily": "Basel Grotesk",
      "fontSize": 19,
      "fontWeight": "400",
      "lineHeight": 24.7,
    }
  }
  suppressHighlighting={true}
>
  14
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": {
          "dynamic": {
            "dark": "rgba(255, 255, 255, 0.38)",
            "light": "rgba(19, 19, 19, 0.35)",
          },
        },
        "fontFamily": "Basel Grotesk",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24.7,
      }
    }
    suppressHighlighting={true}
  >
    ,
    23
  </Text>
</Text>
`;

exports[`renders a DecimalNumber without a decimal part 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    {
      "color": {
        "dynamic": {
          "dark": "#FFFFFF",
          "light": "#131313",
        },
      },
      "fontFamily": "Basel Grotesk",
      "fontSize": 19,
      "fontWeight": "400",
      "lineHeight": 24.7,
    }
  }
  suppressHighlighting={true}
>
  14,123
</Text>
`;
